--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -1,7 +1,26 @@
 .App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
   .Header {
-    display: flex;
-    height: 70px;
-    width: 100%;
+    // display: flex;
+    height: 60px;
+    width: 300px;
+    display: inline-block;
+
+    .search {
+      z-index: 10;
+      //   overflow: hidden;
+      //   overflow: unset;
+      //   scroll-behavior: unset;
+
+      //   margin: 50px 0px 0px 30px;
+      //   position: absolute;
+    }
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .App {
   }
 }
