--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -21,7 +21,7 @@
     }
 
     .search {
-      z-index: 10;
+      //   z-index: 10;
       //   border: 1px solid #222222;
       //   overflow: hidden;
       //   overflow: unset;
@@ -40,6 +40,7 @@
     }
 
     .buttonWrapper {
+      z-index: 10;
       //   width: 70%;
       margin-top: 20px;
       display: flex;
