--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -1,59 +1,62 @@
 .App {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  .Header {
-    font-weight: bold;
-    font-size: 18px;
-    // display: flex;
-    height: 60px;
-    width: 300px;
-    display: inline-block;
-    .description {
-      .description-buttonWrapper {
+  .OMask {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    .Header {
+      font-weight: bold;
+      font-size: 18px;
+      // display: flex;
+      height: 60px;
+      width: 300px;
+      display: inline-block;
+      .description {
+        .description-buttonWrapper {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
+            margin-right: 10px;
+          }
+        }
+      }
+
+      .search {
+        //   z-index: 10;
+        //   border: 1px solid #222222;
+        //   overflow: hidden;
+        //   overflow: unset;
+        //   scroll-behavior: unset;
+
+        //   margin: 50px 0px 0px 30px;
+        //   position: absolute;
+      }
+
+      .Header-select {
+        font-weight: bold;
+        font-size: 18px;
+        margin-top: 20px;
+        height: 40px;
+        width: 70%;
+      }
+
+      .buttonWrapper {
+        z-index: 10;
+        width: 100%;
+        margin-top: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
+
         img {
           margin-right: 10px;
         }
-      }
-    }
 
-    .search {
-      //   z-index: 10;
-      //   border: 1px solid #222222;
-      //   overflow: hidden;
-      //   overflow: unset;
-      //   scroll-behavior: unset;
-
-      //   margin: 50px 0px 0px 30px;
-      //   position: absolute;
-    }
-
-    .Header-select {
-      font-weight: bold;
-      font-size: 18px;
-      margin-top: 20px;
-      height: 40px;
-      width: 70%;
-    }
-
-    .buttonWrapper {
-      z-index: 10;
-      //   width: 70%;
-      margin-top: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      img {
-        margin-right: 10px;
-      }
-
-      .Header-button {
-        font-weight: bold;
-        font-size: 18px;
+        .Header-button {
+          font-weight: bold;
+          font-size: 18px;
+        }
       }
     }
   }
