--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -5,6 +5,21 @@
   height: 100vh;
   background-color: #cecece;
 
+  .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: #00000050;
+    overflow: hidden;
+    .loadingIcon {
+      position: fixed;
+      left: 50%;
+      top: 45%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
   .sidebar {
     z-index: 10;
     position: absolute;
