--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -3,7 +3,6 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background-color: #cecece;
 
   .sidebar {
     z-index: 10;
@@ -11,48 +10,60 @@
     top: 0;
     left: 0;
     transition: left 0.2s ease-in;
+    padding: 6px;
     height: 100vh;
     width: 300px;
-    background-color: #fff;
 
     .sidebar_toggle {
       position: absolute;
       top: 6px;
-      right: -42px;
+      right: -36px;
       width: 36px;
       height: 36px;
       background-color: #000;
       cursor: pointer;
     }
+    .sidebar_toggle:hover {
+      opacity: 0.6;
+    }
+
+    .sidebar_search {
+      height: 400px;
+      box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.4);
+    }
 
     .sidebar_markers {
+      margin-top: 6px;
       padding: 12px 24px;
+      background-color: #fff;
+      box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.4);
     }
     .sidebar_marker {
       display: flex;
-      margin: 12px 0;
-
+      margin: 6px 0;
       img {
         object-fit: contain;
-        width: 36px;
-        height: 36px;
+        width: 30px;
+        height: 30px;
       }
       .sidebar_marker_desc {
         margin: 8px 12px;
-        font-weight: bold;
-        font-size: 18px;
+        font-size: 14px;
       }
     }
 
-    .search {
-    }
+    .sidebar_options {
+      margin-top: 6px;
+      background-color: #fff;
+      box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.4);
 
-    .Header-select {
-      font-weight: bold;
-      font-size: 18px;
-      margin-top: 20px;
-      height: 40px;
-      width: 70%;
+      select {
+        font-weight: bold;
+        font-size: 18px;
+        margin-top: 20px;
+        height: 40px;
+        width: 70%;
+      }
     }
 
     .buttonWrapper {
@@ -74,7 +85,7 @@
     }
   }
   .sidebar-hide {
-    left: -300px;
+    left: -306px;
   }
 }
 
