--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -1,6 +1,8 @@
 .App {
+  overflow-y: hidden;
+  overflow-x: hidden;
   min-width: 100vw;
-  min-height: 100vh;
+  min-height: 635px;
 
   .Header {
     width: 100%;
@@ -11,7 +13,7 @@
     // position: relative;
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 635px;
   }
   .Footer {
     width: 100%;
@@ -93,7 +95,7 @@
 
   // 오른쪽 아래 내위치 버튼
   .buttonWrapper {
-    position: absolute;
+    position: fixed;
     border: 1px solid #22222270;
     border-radius: 5px;
     bottom: 30px;
@@ -122,7 +124,7 @@
     font-size: 18px;
     height: 40px;
     width: 130px;
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     left: 30px;
     z-index: 10;
