--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -96,11 +96,12 @@
   // 오른쪽 아래 내위치 버튼
   .buttonWrapper {
     position: fixed;
-    border: 1px solid #22222270;
-    border-radius: 5px;
+    background-color: #79cdf0;
+    color: #fff;
+    border-radius: 10px;
     bottom: 30px;
     right: 30px;
-    z-index: 10;
+    z-index: 500;
     width: 100px;
     height: 40px;
     display: flex;
@@ -120,6 +121,11 @@
 
   // 왼쪽 아래 반경 선택 버튼
   .SelectBtn {
+    // -webkit-appearance: none;
+    // background-color: #79cdf0;
+    // color: #79cdf0;
+    border: none;
+    border-radius: 10px;
     font-weight: bold;
     font-size: 18px;
     height: 40px;
