--- a/omask/src/component/index.scss
+++ b/omask/src/component/index.scss
@@ -43,15 +43,22 @@
     z-index: 5;
     top: 10px;
     left: 10px;
-    background-color: rgba($color: #fff, $alpha: 0.4);
-    padding: 5px 5px;
+    background-color: rgba($color: #79cdf0, $alpha: 0.6);
+    border-radius: 10px;
+    padding: 5px;
     box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
+    color: #fff;
+    font-size: 16px;
 
     .DailyIndicator__ItemWrapper {
       align-items: flex-start;
-      font-size: 16px;
+
+      .DailyIndicator__ItemWrapper--info {
+        border: 1px solid rgba($color: #fff, $alpha: 0.4);
+        border-radius: 5px;
+      }
       .DailyIndicator__ItemWrapper--day {
-        margin-right: 10px;
+        font-weight: bold;
       }
       .DailyIndicator__ItemWrapper--born {
         font-weight: bold;
@@ -68,6 +75,7 @@
 
     .sidebar_markers {
       background-color: rgba($color: #fff, $alpha: 0.6);
+      border-radius: 10px;
       padding: 5px 5px;
       box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
     }
@@ -119,21 +127,29 @@
     }
   }
 
-  // 왼쪽 아래 반경 선택 버튼
-  .SelectBtn {
-    // -webkit-appearance: none;
-    // background-color: #79cdf0;
-    // color: #79cdf0;
-    border: none;
+  .SelectWrapper {
+    align-items: center;
+    display: flex;
+    background-color: #79cdf0;
+    color: #fff;
     border-radius: 10px;
-    font-weight: bold;
-    font-size: 18px;
     height: 40px;
-    width: 130px;
     position: fixed;
     bottom: 30px;
     left: 30px;
     z-index: 10;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  // 왼쪽 아래 반경 선택 버튼
+  .SelectBtn {
+    -webkit-appearance: none;
+    background-color: #79cdf0;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
   }
 
   // 검색 사이드바
@@ -202,7 +218,8 @@
     }
 
     // 왼쪽 아래 반경 선택 버튼
-    .SelectBtn {
+
+    .SelectWrapper {
       font-size: 16px;
       bottom: 10px;
       left: 10px;
